[package]
name = "hyper-upload"
authors = ["Jamie Brough <jamie@wavey.ai>"]
version = "0.1.0"
edition = "2021"

[dependencies]
hyper-util = { version = "0.1.3", features = ["full"] }
env_logger = "0.11.0"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
structopt = "0.3.26"
bytes = "1.5.0"
hyper = { version = "1.3.1", features = ["full"] }
http = "1"
regex = "1.10.2"
http-body-util = "0.1.1"
anyhow = "1.0.31"
quinn = { version = "0.11", default-features = false, features = [
  "runtime-tokio",
  "rustls",
  "ring",
] }
rustls = { version = "0.23", default-features = false, features = [
  "logging",
  "ring",
  "std",
] }
h2 = "0.4.3"
xxhash-rust = { version = "0.8.10", features = ["xxh3", "const_xxh3"] }
h3 = { git = "https://github.com/hyperium/h3.git" }
h3-quinn = { git = "https://github.com/hyperium/h3.git", features = [
  "datagram",
] }
h3-webtransport = { git = "https://github.com/hyperium/h3.git" }
h3-datagram = { git = "https://github.com/hyperium/h3.git" }
tls-helpers = "0.1.6"
mime_guess = "2.0.5"
evmap = { git = "https://github.com/jonhoo/evmap.git" }
path-clean = "1.0.1"
flate2 = "1.0.34"
url = "2.5.4"
sha2 = "0.10.8"
base64 = "0.22.1"
tokio-rustls = "0.26"

[profile.release]
opt-level = 3
strip = true
debug = false
codegen-units = 1
lto = true
